# gmchess

./: .clang-format  meson.build
src/: Board.cc  Board.h  MainWindow.cc  meson.build
